# onvif_client

./: .gitignore  CMakeLists.txt  README.md  main.cpp
Driver/: CMakeLists.txt  build_VS2019_x64.bat  class_diagram.xmi
Driver/GSoap/: CMakeLists.txt  NotificationProducerBinding.nsmap  soapCreatePullPointBindingProxy.cpp  soapCreatePullPointBindingProxy.h  soapDeviceBindingProxy.cpp  soapDeviceIOBindingProxy.cpp  soapDeviceIOBindingProxy.h  soapEventBindingProxy.cpp  soapEventBindingProxy.h  soapMediaBindingProxy.cpp  soapNotificationConsumerBindingProxy.cpp  soapNotificationConsumerBindingProxy.h  soapNotificationProducerBindingProxy.cpp  soapNotificationProducerBindingProxy.h  soapPausableSubscriptionManagerBindingProxy.cpp  soapPausableSubscriptionManagerBindingProxy.h  soapPullPointBindingProxy.cpp  soapPullPointBindingProxy.h  soapPullPointSubscriptionBindingProxy.cpp  soapPullPointSubscriptionBindingProxy.h  soapReceiverBindingProxy.cpp  soapReceiverBindingProxy.h  soapRecordingBindingProxy.cpp  soapRecordingBindingProxy.h  soapReplayBindingProxy.cpp  soapReplayBindingProxy.h  soapSearchBindingProxy.cpp  soapSearchBindingProxy.h  soapStub.h  soapSubscriptionManagerBindingProxy.cpp  soapSubscriptionManagerBindingProxy.h  wsdd.nsmap  wsseapi.cpp
Driver/GSoap/back/: soapDeviceBindingProxy.cpp  soapDeviceBindingProxy.h  soapStub.h  soapwsddProxy.h
Driver/Headers/: ConnectionInfo.h  IAudioOutput.h  IDevice.h  SoapFactory.h  SoapHelpers.h  device.h  device_service.h  event_service.h  media_service.h  types.h  util.h
Driver/Interfaces/: IDevice.h  IReplayControl.h  IReplaySearch.h
Driver/ONVIF_WSDLs/: deviceio.wsdl  event.wsdl  onvif.h  onvif.xsd  soapcpp2.bat  wsdl2h.bat
Driver/ONVIF_WSDLs/sources/: soapDeviceBindingProxy.cpp  soapMediaBindingProxy.cpp  soapwsddProxy.cpp
Driver/Replay/: replay_control_factory.cpp  replay_control_impl.cpp  replay_control_impl.h  replay_factory.cpp  replay_factory.h  replay_search_impl.cpp  replay_search_impl.h
Driver/Sources/: ConnectionInfo.cpp  SoapFactory.cpp  device.cpp  device_service.cpp  event_service.cpp  media_service.cpp
GUI/GUI_Util/: CMakeLists.txt  DevicesManager.cpp  DevicesManager.h  Resources.qrc  adddevicedialog.cpp  adddevicedialog.h  adddevicedialog.ui  audioinputgrabber.cpp  audioinputgrabber.h  dialogwaiting.cpp  dialogwaiting.h  dialogwaiting.ui  formdevicemaintenance.cpp  formdevicemaintenance.h  formdevicemaintenance.ui  formvideoconfiguration.cpp  formvideoconfiguration.h  formvideoconfiguration.ui  formvideolive.cpp  formvideolive.h  formvideolive.ui  logging.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  playerwidget.cpp  playerwidget.h  playerwidget.ui  recordingsform.cpp  recordingsform.h  recordingsform.ui  streamhandler.cpp  streamhandler.h
Headers/: IDevice.h  device.h  device_service.h  types.h
Headers/SOAP/: media_service.h  soapDeviceBindingProxy.h  soapH.h  wsdd.nsmap
Libs/Boost/lib/: boost_date_time-vc140-mt.lib  boost_regex-vc140-mt.lib
Libs/OpenSSL/include/openssl/: opensslconf.h
Libs/OpenSSL/lib/: libeay32.lib  ssleay32.lib
ONVIF_WSDLs/: onvif.h
ONVIF_WSDLs/sources/: soapDeviceBindingProxy.cpp  soapH.h  soapMediaBindingProxy.h  soapStub.h  soapwsddProxy.cpp
SOAP/: DeviceBinding.nsmap  soapStub.h  soapwsddProxy.cpp  soapwsddProxy.h
Sources/: device.cpp  device_service.cpp  types.cpp  util.cpp
Sources/SOAP/: media_service.cpp  soapC.cpp  soapDeviceBindingProxy.cpp  soapMediaBindingProxy.cpp  soapwsddProxy.cpp
